[tool.poetry]
name = "sitemap-crawler"
version = "0.1.0"
description = ""
authors = ["Francois Vermaut <fvermaut@gmail.com>"]
readme = "README.md"
packages = [{include = "sitemap_crawler"}]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
pydantic = "^2.5.2"
requests = "^2.31.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
